@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Accessibility
-_Comment=Accessibility Settings
+_Name=Universal Access
+_Comment=Universal Access Settings
 Type=Directory
 Icon=accessibility-directory
 Encoding=UTF-8
