@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Accessibility
-_Comment=Accessibility related preferences
+_Name=Universal Access
+_Comment=Universal access related preferences
 Icon=accessibility-directory
 Type=Directory
 Encoding=UTF-8
