@@ -32,7 +32,7 @@
 
   <!-- Accessibility -->
   <Menu>
-    <Name>Accessibility</Name>
+    <Name>Universal Access</Name>
     <Directory>Settings-Accessibility.directory</Directory>
     <Include>
       <And>
